# rust-afk

./: .gitattributes  .gitignore  .yarnrc.yml  Cargo.toml  flake.nix  justfile  package.json  rust-toolchain.toml  tailwind.config.js
nix/: yarn-project.nix
src/: fonts.rs  highlight.rs  image.rs  main.rs
web/: main.css
